Created a specialised API resource for displaying the latest transient states for a role and created the required auto-mapper profiles to map from the respective model.
