# src/za.co.grindrodbank.a3s/A3SApiResources/RoleTransients.cs
@@ -1,0 +1,158 @@
+/**
+ * *************************************************
+ * Copyright (c) 2019, Grindrod Bank Limited
+ * License MIT: https://opensource.org/licenses/MIT
+ * **************************************************
+ */
+/*
+ * A3S
+ *
+ * API Definition for A3S. This service allows authentication, authorisation and accounting.
+ *
+ * The version of the OpenAPI document: 1.1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Linq;
+using System.Text;
+using System.Collections.Generic;
+using System.ComponentModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using za.co.grindrodbank.a3s.Converters;
+
+namespace za.co.grindrodbank.a3s.A3SApiResources
+{ 
+    /// <summary>
+    /// Represents the current active transients for a role and it&#39;s relations. 
+    /// </summary>
+    [DataContract]
+    public partial class RoleTransients : IEquatable<RoleTransients>
+    { 
+        /// <summary>
+        /// Gets or Sets LatestActiveRoleTransients
+        /// </summary>
+        [DataMember(Name="latestActiveRoleTransients", EmitDefaultValue=false)]
+        public List<RoleTransientsItem> LatestActiveRoleTransients { get; set; }
+
+        /// <summary>
+        /// A list of the latest transient role function assignments for this transient role.
+        /// </summary>
+        /// <value>A list of the latest transient role function assignments for this transient role.</value>
+        [DataMember(Name="latestTransientRoleFunctions", EmitDefaultValue=false)]
+        public List<RoleFunctionTransient> LatestTransientRoleFunctions { get; set; }
+
+        /// <summary>
+        /// A list of the latest transient role - child role assignments for this transient role.
+        /// </summary>
+        /// <value>A list of the latest transient role - child role assignments for this transient role.</value>
+        [DataMember(Name="latestTransientRoleChildRoles", EmitDefaultValue=false)]
+        public List<RoleChildRoleTransient> LatestTransientRoleChildRoles { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class RoleTransients {\n");
+            sb.Append("  LatestActiveRoleTransients: ").Append(LatestActiveRoleTransients).Append("\n");
+            sb.Append("  LatestTransientRoleFunctions: ").Append(LatestTransientRoleFunctions).Append("\n");
+            sb.Append("  LatestTransientRoleChildRoles: ").Append(LatestTransientRoleChildRoles).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (obj is null) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((RoleTransients)obj);
+        }
+
+        /// <summary>
+        /// Returns true if RoleTransients instances are equal
+        /// </summary>
+        /// <param name="other">Instance of RoleTransients to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(RoleTransients other)
+        {
+            if (other is null) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    LatestActiveRoleTransients == other.LatestActiveRoleTransients ||
+                    LatestActiveRoleTransients != null &&
+                    other.LatestActiveRoleTransients != null &&
+                    LatestActiveRoleTransients.SequenceEqual(other.LatestActiveRoleTransients)
+                ) && 
+                (
+                    LatestTransientRoleFunctions == other.LatestTransientRoleFunctions ||
+                    LatestTransientRoleFunctions != null &&
+                    other.LatestTransientRoleFunctions != null &&
+                    LatestTransientRoleFunctions.SequenceEqual(other.LatestTransientRoleFunctions)
+                ) && 
+                (
+                    LatestTransientRoleChildRoles == other.LatestTransientRoleChildRoles ||
+                    LatestTransientRoleChildRoles != null &&
+                    other.LatestTransientRoleChildRoles != null &&
+                    LatestTransientRoleChildRoles.SequenceEqual(other.LatestTransientRoleChildRoles)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    if (LatestActiveRoleTransients != null)
+                    hashCode = hashCode * 59 + LatestActiveRoleTransients.GetHashCode();
+                    if (LatestTransientRoleFunctions != null)
+                    hashCode = hashCode * 59 + LatestTransientRoleFunctions.GetHashCode();
+                    if (LatestTransientRoleChildRoles != null)
+                    hashCode = hashCode * 59 + LatestTransientRoleChildRoles.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(RoleTransients left, RoleTransients right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(RoleTransients left, RoleTransients right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
