# src/za.co.grindrodbank.a3s/wwwroot/openapi-original.json
@@ -1749,7 +1749,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/RoleTransient"
+                  "$ref" : "#/components/schemas/RoleTransients"
                 }
               }
             },
@@ -5414,6 +5414,131 @@
           "changedBy" : {
             "format" : "uuid",
             "type" : "string"
+          },
+          "latestTransientRoleFunctions" : {
+            "description" : "A list of the latest transient role function assignments for this transient role.",
+            "items" : {
+              "$ref" : "#/components/schemas/RoleFunctionTransient"
+            },
+            "type" : "array"
+          },
+          "latestTransientRoleChildRoles" : {
+            "description" : "A list of the latest transient role - child role assignments for this transient role.",
+            "items" : {
+              "$ref" : "#/components/schemas/RoleChildRoleTransient"
+            },
+            "type" : "array"
+          }
+        },
+        "type" : "object"
+      },
+      "RoleTransientsItem" : {
+        "description" : "Represents a transient state of a role.\n",
+        "example" : {
+          "roleId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+          "changedBy" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+          "name" : "name",
+          "description" : "description",
+          "r_state" : "r_state",
+          "action" : "action",
+          "uuid" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+          "approvalCount" : 0
+        },
+        "properties" : {
+          "uuid" : {
+            "description" : "A unique ID for a transient role record.",
+            "format" : "uuid",
+            "type" : "string"
+          },
+          "roleId" : {
+            "format" : "uuid",
+            "type" : "string"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "description" : {
+            "type" : "string"
+          },
+          "r_state" : {
+            "type" : "string"
+          },
+          "action" : {
+            "type" : "string"
+          },
+          "approvalCount" : {
+            "type" : "integer"
+          },
+          "changedBy" : {
+            "format" : "uuid",
+            "type" : "string"
+          }
+        },
+        "type" : "object"
+      },
+      "RoleTransients" : {
+        "description" : "Represents the current active transients for a role and it's relations.\n",
+        "example" : {
+          "latestTransientRoleChildRoles" : [ {
+            "roleId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "changedBy" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "r_state" : "r_state",
+            "action" : "action",
+            "uuid" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "childRoleId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "approvalCount" : 1
+          }, {
+            "roleId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "changedBy" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "r_state" : "r_state",
+            "action" : "action",
+            "uuid" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "childRoleId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "approvalCount" : 1
+          } ],
+          "latestActiveRoleTransients" : [ {
+            "roleId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "changedBy" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "name" : "name",
+            "description" : "description",
+            "r_state" : "r_state",
+            "action" : "action",
+            "uuid" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "approvalCount" : 0
+          }, {
+            "roleId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "changedBy" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "name" : "name",
+            "description" : "description",
+            "r_state" : "r_state",
+            "action" : "action",
+            "uuid" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "approvalCount" : 0
+          } ],
+          "latestTransientRoleFunctions" : [ {
+            "functionId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "roleId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "changedBy" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "r_state" : "r_state",
+            "action" : "action",
+            "uuid" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "approvalCount" : 6
+          }, {
+            "functionId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "roleId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "changedBy" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "r_state" : "r_state",
+            "action" : "action",
+            "uuid" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+            "approvalCount" : 6
+          } ]
+        },
+        "properties" : {
+          "latestActiveRoleTransients" : {
+            "items" : {
+              "$ref" : "#/components/schemas/RoleTransientsItem"
+            },
+            "type" : "array"
           },
           "latestTransientRoleFunctions" : {
             "description" : "A list of the latest transient role function assignments for this transient role.",
